# lcdemu

./: AUTHORS  ChangeLog  INSTALL  MANIFEST  Makefile  README  TODO  aclocal.m4  characters.h  close_emu.c  close_emu.h  config.h.in  configure.in  defines.h  goodies.c  goodies.h  handle_out.c  handle_out.h  in.c  in.h  includes.h  init_emu.c  init_emu.h  lcdemu  main.c  main.h  mess.c  mess.h  out.c  out.h  run_emu.c  run_emu.h  start_test  test_lcd.c  var_def.h  var_exp.h
scripts/: start  stop
src/: Makefile.am  bg-off.xpm.h  bg.xpm.h  callbacks.c  callbacks.h  char-off.xpm.h  char.xpm.h  core.c  core.h  defines.h  draw_char.c  draw_char.h  input.c  input.h  interface.c  interface.h  main.c  main.h
