dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(lcdemu, 0.6-beta1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_ARG_ENABLE(debug,
	[  --enable-debug          turn on debugging [default=no]],
		AC_DEFINE(DEBUG, 1, [Define to switch on debug messages]),)

AC_ARG_ENABLE(debug-dump-buffer,
	[  --enable-dump_buffer    turn on buffer dump output [default=no]],
		AC_DEFINE(DEBUG_BUF_DUMP, 1, [Define to switch on buffer dumping]),)

AC_ARG_ENABLE(debug-echo,
	[  --enable-debug-echo     turn on echoing all characters receved [default=no]],
		AC_DEFINE(DEBUG_ECHO, 1, [Define to echo all receved characters]),)

AC_OUTPUT([
Makefile
src/Makefile
])

